tests/NormalTests/paczka1/fuzzy1/29953764.err
Error in line 4: gu8rDlQM9A A219 97,5
Error in line 5: cXqG7vb4 S725 26,8
Error in line 19: cXqG7vb4 S133 33,4
Error in line 12: 5D91cRNgO S133 47,5
Error in line 24: 5D91cRNgO S725 99,6
Error in line 21: MEgKH7kBqJ A219 17,9
Error in line 17: gu8rDlQM9A S133 130,1
Error in line 28: cXqG7vb4 A219 29,8
Error in line 33: cXqG7vb4 S376 77,3
